--- a/index.html
+++ b/index.html
@@ -147,6 +147,29 @@
             background-color: #388e3c;
             box-shadow: 0 0 15px rgba(76, 175, 80, 0.8);
         }
+        #loginBtn {
+            margin-top: 20px;
+            background-color: #2196F3;
+            color: white;
+            width: 100%;
+            padding: 12px;
+            font-weight: bold;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            font-size: 1.1rem;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        #loginBtn:hover {
+            background-color: #1976D2;
+            box-shadow: 0 0 20px rgba(33, 150, 243, 0.8);
+        }
+
+        #loginBtn:active {
+            transform: scale(0.95);
+            box-shadow: 0 0 10px rgba(33, 150, 243, 0.5);
+        }
     </style>
 </head>
 
@@ -156,6 +179,10 @@
         <h1>FitFlow</h1>
             <h2 style="font-size: larger;">Your Health, One Insight at a Time. </h2> 
         <p>Get a comprehensive analysis of your diet and health</p>
+
+
+        <button id="loginBtn" onclick="redirectToLogin()">Login</button>
+
 
         <form id="dietForm">
             <label for="age">Age:</label>
@@ -201,6 +228,10 @@
     </div>
 
     <script>
+        function redirectToLogin() {
+            window.location.href = 'login.html';
+        }
+
         document.getElementById("dietForm").addEventListener("submit", function (event) {
             event.preventDefault();
 
