--- a/login.html
+++ b/login.html
@@ -521,7 +521,7 @@
                 console.log("Google Sign In Successful!", result.user);
                 alert("Google Sign In Successful!");
                 // Redirect to main website or dashboard
-                window.location.href = "Index.html";
+                window.location.href = "index.html";
             } catch (error) {
                 console.error(error.message);
                 alert(error.message);
